--- a/_pages/en/docs.html
+++ b/_pages/en/docs.html
@@ -21,31 +21,83 @@ permalink: /docs.html
 </ul>
 
 <h2>How to add your data</h2>
+<h3 class="h4">Adding your administration</h3>
+<p>
+    In the <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/administrations">administrations</a> directory add your adminstration in the 
+    <a href="https://github.com/canada-ca/ore-ero/blob/master/_data/administrations/federal.yml">federal.yml</a>, 
+    <a href="https://github.com/canada-ca/ore-ero/blob/master/_data/administrations/provincial.yml">provincial.yml</a> or 
+    <a href="https://github.com/canada-ca/ore-ero/blob/master/_data/administrations/municipal.yml">municipal.yml</a> file.
+</p>
 
-<ul>
-    <li><h3 class="h5">Adding you administration</h3></li>
-    <ul>
-        <li>In the <a href="https://github.com/VilledeMontreal/ore-ero/tree/master/_data/administrations">administrations</a> directory add your adminstration in the 
-            <a href="https://github.com/VilledeMontreal/ore-ero/blob/master/_data/administrations/federal.yml">federal.yml</a>, 
-            <a href="https://github.com/VilledeMontreal/ore-ero/blob/master/_data/administrations/provincial.yml">provincial.yml</a> or 
-            <a href="https://github.com/VilledeMontreal/ore-ero/blob/master/_data/administrations/municipal.yml">municipal.yml</a> file.
-        </li>
-    </ul>
-    <li><h3 class="h5">Adding Open Source Code</h3></li>
-    <ul>
-        <li><h4 class="h5">Your administration is already there:</h4>
-            If there is already a file for your adminstration under the <a href="https://github.com/VilledeMontreal/ore-ero/tree/master/_data/code">code</a> directory, you need to edit that file to add your released open source code.
-            <br><br>
-            You can copy the contents of the file from the following <a href="https://raw.githubusercontent.com/canada-ca/ore-ero/master/_data_templates/code_mandatory.yml">example</a>, and change the informtion for your code. These are only the mandatory fields. 
-            For more informations, click <a href="./open-source-code-schema.html">here</a> to see the Metadata Schema for Open Source Code.
-        </li>
+<h3 class="h4">Adding Open Source Code</h3>
+<h3 class="h5">Your administration is already there:</h3>
+<p>
+    If there is already a file for your adminstration under the <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/code">code</a> directory, you need to edit that file to add your released open source code.
+</p>
 
-        <li><h4 class="h5">Your administration needs to be added:</h4>
-            If your adminstration doesn't have a file under the 
-            <a href="https://github.com/VilledeMontreal/ore-ero/tree/master/_data/code">code</a> directory, you need to create a new file for your administration. Use the 
-            <a href="https://github.com/VilledeMontreal/ore-ero/blob/master/_data_templates/code_mandatory.yml">code template with only mandatory fields</a>.
-        </li>
-    </ul>
-    <li><h3 class="h5">Adding Open Source Software</h3></li>
-    <li><h3 class="h5">Adding Open Standards</h3></li>
-</ul>
+<p>
+    If not, use the <a href="https://raw.githubusercontent.com/canada-ca/ore-ero/master/_data_templates/code_mandatory.yml">example file</a> with all fields.
+</p>
+
+<p>
+    For more informations, click <a href="./open-source-code-schema.html">here</a> to see the Metadata Schema for Open Source Code.
+</p>
+
+<h4 class="h5">Your administration needs to be added:</h4>
+<p>
+    If your adminstration doesn't have a file under the 
+    <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/code">code</a> directory, you need to create a new file for your administration. Use the 
+    <a href="https://github.com/canada-ca/ore-ero/blob/master/_data_templates/code_mandatory.yml">code template with only mandatory fields</a>.
+</p>
+
+<h3 class="h4">Adding Open Source Software</h3>
+<h4 class="h5">The software is already there</h4>
+<p>
+    If there is already a file for the open source software you are using under the <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/logiciels_libres-open_source_software">logiciels_libres-open_source_software</a> directory, 
+    you need to check if your adminstration is already listed as using the open source software.
+</p>
+
+<p>
+    If not, you can copy the following at the bottom of the file, and change the informtion for your adminstration and use of the open source software. These are only the mandatory fields.
+</p>
+<div class="well">
+    -<br>
+    adminCode: abc-def<br>
+    uses:<br>
+    &nbsp;&nbsp;&nbsp;-<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;contact:<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;URL: https://www.example.com<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;name:<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;en: "Example use"<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fr: "Exemple d'utilisation"<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;description:<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;en: "Etiam rutrum, tellus nec egestas blandit."<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fr: "Vestibulum fringilla vel purus nec iaculis."<br>
+</div>
+<p>
+    If your adminstration is there add your use of open source software under it, you can copy the following, and change the informtion for your adminstration and use of the open source software. These are only the mandatory fields.
+</p>
+
+<div class="well">
+    &nbsp;&nbsp;&nbsp;-<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;contact:<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;URL: https://www.example.com<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;name:<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;en: "Example use"<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fr: "Exemple d'utilisation"<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;description:<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;en: "Etiam rutrum, tellus nec egestas blandit."<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fr: "Vestibulum fringilla vel purus nec iaculis."<br>
+</div>
+
+<p>
+    For more informations, click <a href="./open-source-software-schema.html">here</a> to see the Metadata Schema for Open Source Software.
+</p>
+
+<h4 class="h5">Your open source software needs to be added</h4>
+<p>
+    If your open source software does'nt have a file under the <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/logiciels_libres-open_source_software">logiciels_libres-open_source_software</a> directory, 
+    you need to create a new file for the open source software. Use the <a href="https://github.com/canada-ca/ore-ero/blob/master/_data_templates/ll-oss_mandatory.yml">ll-oss template with only mandatory fields</a>.
+</p>
+
+<h3 class="h4">Adding Open Standards</h3>
