--- a/_pages/en/docs.html
+++ b/_pages/en/docs.html
@@ -20,6 +20,11 @@ permalink: /docs.html
     <li><h3 class="h5">open_source_software</h3> List of open source software used by administrations.</li>
 </ul>
 
+<h2>Open Standards - Still in development</h2>
+<p>
+    List open standards endorsed or used by administrations.
+</p>
+
 <h2>How to add your data</h2>
 <h3 class="h4">Adding your administration</h3>
 <p>
@@ -30,14 +35,43 @@ permalink: /docs.html
 </p>
 
 <h3 class="h4">Adding Open Source Code</h3>
-<h3 class="h5">Your administration is already there:</h3>
+<h4 class="h5">Your administration is already there:</h4>
 <p>
     If there is already a file for your adminstration under the <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/code">code</a> directory, you need to edit that file to add your released open source code.
 </p>
 
 <p>
-    If not, use the <a href="https://raw.githubusercontent.com/canada-ca/ore-ero/master/_data_templates/code_mandatory.yml">example file</a> with all fields.
+    You can copy the following at the bottom of the file, and change the informtion for your code. These are only the mandatory fields.
 </p>
+
+<div class="well">
+    -<br>
+    &nbsp;&nbsp;&nbsp;contact:<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;email: "abc@xyz.com"<br>
+    &nbsp;&nbsp;&nbsp;date:<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;created: "YYYY-MM-DD"<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;metadataLastUpdated: "YYYY-MM-DD"<br>
+    &nbsp;&nbsp;&nbsp;description:<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;en: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fr&nbsp; : "Quisque bibendum ante ligula, porta vestibulum enim egestas vel."<br>
+    &nbsp;&nbsp;&nbsp;name:<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;en: "Example"<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fr&nbsp; : "Exemple"<br>
+    &nbsp;&nbsp;&nbsp;licenses:<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;URL:<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;en: "https://example.com/repo/example/LICENCE-en"<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fr&nbsp; : "https://example.com/repo/example/LICENCE-fr"<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;spdxID: "XYZ-1.0"<br>
+    &nbsp;&nbsp;&nbsp;repositoryURL:<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;en: "https://example.com/repo/example"<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fr&nbsp; : "https://example.com/repo/example"<br>
+    &nbsp;&nbsp;&nbsp;tags:<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;en:<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- &nbsp; "tag1-en"<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fr&nbsp; :<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- &nbsp; "tag1-fr"<br>
+</div>
 
 <p>
     For more informations, click <a href="./open-source-code-schema.html">here</a> to see the Metadata Schema for Open Source Code.
@@ -69,10 +103,10 @@ permalink: /docs.html
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;URL: https://www.example.com<br>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;name:<br>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;en: "Example use"<br>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fr: "Exemple d'utilisation"<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fr&nbsp; : "Exemple d'utilisation"<br>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;description:<br>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;en: "Etiam rutrum, tellus nec egestas blandit."<br>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fr: "Vestibulum fringilla vel purus nec iaculis."<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fr&nbsp; : "Vestibulum fringilla vel purus nec iaculis."<br>
 </div>
 <p>
     If your adminstration is there add your use of open source software under it, you can copy the following, and change the informtion for your adminstration and use of the open source software. These are only the mandatory fields.
@@ -84,10 +118,10 @@ permalink: /docs.html
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;URL: https://www.example.com<br>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;name:<br>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;en: "Example use"<br>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fr: "Exemple d'utilisation"<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fr&nbsp; : "Exemple d'utilisation"<br>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;description:<br>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;en: "Etiam rutrum, tellus nec egestas blandit."<br>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fr: "Vestibulum fringilla vel purus nec iaculis."<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fr&nbsp; : "Vestibulum fringilla vel purus nec iaculis."<br>
 </div>
 
 <p>
@@ -99,5 +133,3 @@ permalink: /docs.html
     If your open source software does'nt have a file under the <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/logiciels_libres-open_source_software">logiciels_libres-open_source_software</a> directory, 
     you need to create a new file for the open source software. Use the <a href="https://github.com/canada-ca/ore-ero/blob/master/_data_templates/ll-oss_mandatory.yml">ll-oss template with only mandatory fields</a>.
 </p>
-
-<h3 class="h4">Adding Open Standards</h3>
