--- a/_pages/fr/accueil.html
+++ b/_pages/fr/accueil.html
@@ -40,6 +40,13 @@ permalink: accueil.html
           <p>Effectuez des recherches dans les normes ouvertes utilisés par les administrations publiques Canadiennes.</p>
         </section>
       </div>
+
+      <div class="col-md-6">
+        <section>
+          <h3 class="h5"><a href="./docs-fr.html">Documentation</a></h3>
+          <p>Découvrez comment contribuer en utilisant un schéma de métadonnées standard pour chaque service.</p>
+        </section>
+      </div>
     </div>
   </section>
 
