Features/create docs section (#61)
* create a link to a documentation section on the home page

* a documentation page that contains links to all schemas

* create 2 pages that will contains open-software and open-standards metadata schemas

* add more data and organize the style

* add more informations. add code examples

* let the documentation content flow

* finish the documentation in egnlish

* add documentation in french. and create french pages for oss schema and open standards schema

* correct open standards link in french

* fixed links

--- a/_pages/en/home.html
+++ b/_pages/en/home.html
@@ -40,6 +40,13 @@ permalink: home.html
           <p>Search open standards used by Canadian public administrations.</p>
         </section>
       </div>
+
+      <div class="col-md-6">
+        <section>
+          <h3 class="h5"><a href="./docs.html">Documentation</a></h3>
+          <p>Find out how to contribute using a standard metadata schema for each service.</p>
+        </section>
+      </div>
     </div>
   </section>
 
