--- a/_pages/en/home.html
+++ b/_pages/en/home.html
@@ -22,28 +22,28 @@ permalink: home.html
     <div class="wb-eqht row">
       <div class="col-md-6">
         <section>
-          <h3 class="h5"><a href="./open-source-code.html">Open source code</a></h3>
+          <h3><a href="./open-source-code.html">Open source code</a></h3>
           <p>Search Canadian public administrations open source projects and code repositories, get access to code and software, and contribute to ongoing development.</p>
         </section>
       </div>
       
       <div class="col-md-6">
         <section>
-          <h3 class="h5"><a href="./open-source-software.html">Open source software</a></h3>
+          <h3><a href="./open-source-software.html">Open source software</a></h3>
           <p>Search open source software used by Canadian public administrations, promote collaboration and reuse of preferred solutions.</p>
         </section>
       </div>
 
       <div class="col-md-6">
         <section>
-          <h3 class="h5"><a href="./open-standards.html">Open Standards</a></h3>
+          <h3><a href="./open-standards.html">Open Standards</a></h3>
           <p>Search open standards used by Canadian public administrations.</p>
         </section>
       </div>
 
       <div class="col-md-6">
         <section>
-          <h3 class="h5"><a href="./docs.html">Documentation</a></h3>
+          <h3><a href="./docs.html">Documentation</a></h3>
           <p>Find out how to contribute using a standard metadata schema for each service.</p>
         </section>
       </div>
