--- a/_pages/fr/accueil.html
+++ b/_pages/fr/accueil.html
@@ -22,28 +22,28 @@ permalink: accueil.html
     <div class="wb-eqht row">
       <div class="col-md-6">
         <section>
-          <h3 class="h5"><a href="./code-source-ouvert.html">Code source ouvert</a></h3>
+          <h3><a href="./code-source-ouvert.html">Code source ouvert</a></h3>
           <p>Effectuez des recherches dans les projets libres et dépôts de code des administrations publiques Canadiennes, accédez le code et les logiciels, et contribuer au développement en cours.</p>
         </section>
       </div>
 
       <div class="col-md-6">
         <section>
-          <h3 class="h5"><a href="./logiciels-libres.html">Logiciels libres</a></h3>
+          <h3><a href="./logiciels-libres.html">Logiciels libres</a></h3>
           <p>Effectuez des recherches dans les logiciels libres utilisés par les administrations publiques Canadiennes, promouvez la collaboration et la réutilisation de solutions préférées.</p>
         </section>
       </div>
       
       <div class="col-md-6">
         <section>
-          <h3 class="h5"><a href="./normes-ouvertes.html">Normes ouvertes</a></h3>
+          <h3><a href="./normes-ouvertes.html">Normes ouvertes</a></h3>
           <p>Effectuez des recherches dans les normes ouvertes utilisés par les administrations publiques Canadiennes.</p>
         </section>
       </div>
 
       <div class="col-md-6">
         <section>
-          <h3 class="h5"><a href="./docs-fr.html">Documentation</a></h3>
+          <h3><a href="./docs-fr.html">Documentation</a></h3>
           <p>Découvrez comment contribuer en utilisant un schéma de métadonnées standard pour chaque service.</p>
         </section>
       </div>
