add /en and /fr to all permalinks and fix some links - Rename home.html and accueil.html to index.html

--- a/404.html
+++ b/404.html
@@ -43,14 +43,14 @@ permalink: /404.html
 <h2><span class="glyphicon glyphicon-warning-sign mrgn-rght-md"></span> We couldn't find that Web page (Error 404)</h2>
 <p>We're sorry you ended up here. Sometimes a page gets moved or deleted, but hopefully we can help you find what you're looking for.</p>
 <ul>
-<li>Return to the <a href="./home.html">home page</a></li>
+<li>Return to the <a href="./en/index.html">home page</a></li>
 </ul>
 </section>
 <section class="col-md-6" lang="fr">
 <h2><span class="glyphicon glyphicon-warning-sign mrgn-rght-md"></span> Nous ne pouvons trouver cette page Web (Erreur 404)</h2>
 <p>Nous sommes désolés que vous ayez abouti ici. Il arrive parfois qu'une page ait été déplacée ou supprimée. Heureusement, nous pouvons vous aider à trouver ce que vous cherchez.</p>
 <ul>
-<li>Retournez à la <a href="./accueil.html">page d'accueil</a></li>
+<li>Retournez à la <a href="./fr/index.html">page d'accueil</a></li>
 </ul>
 </section>
 </div>
