--- a/_pages/fr/code-source-ouvert-schema.html
+++ b/_pages/fr/code-source-ouvert-schema.html
@@ -2,11 +2,11 @@
 layout: default
 ref: codeSchema
 lang: fr
-permalink: /code-source-ouvert-schema.html
+permalink: /fr/code-source-ouvert-schema.html
 ---
 
 <h1 property="name" id="wb-cont">Schéma de métadonnées pour code source ouvert</h1>
-<p>Le schéma de métadonnées pour le <a href="code-source-ouvert.html">Code source ouvert</a>.</p>
+<p>Le schéma de métadonnées pour le <a href="./code-source-ouvert.html">Code source ouvert</a>.</p>
 <p>Les données sont hébergés sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>.</p>
 
 <h2> Version 1.0</h2>
