--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -2,7 +2,7 @@
 layout: default
 ref: home
 lang: fr
-permalink: accueil.html
+permalink: /fr/index.html
 ---
 
 <div class="row profile">
@@ -43,7 +43,7 @@ permalink: accueil.html
 
       <div class="col-md-6">
         <section>
-          <h3><a href="./docs-fr.html">Documentation</a></h3>
+          <h3><a href="./docs.html">Documentation</a></h3>
           <p>Découvrez comment contribuer en utilisant un schéma de métadonnées standard pour chaque service.</p>
         </section>
       </div>
