--- a/_pages/fr/logiciels-libres.html
+++ b/_pages/fr/logiciels-libres.html
@@ -2,7 +2,7 @@
 layout: default
 ref: oss
 lang: fr
-permalink: /logiciels-libres.html
+permalink: /fr/logiciels-libres.html
 ---
 
 <h1 property="name" id="wb-cont">Logiciels libres</h1>
