--- a/_pages/fr/normes-ouvertes.html
+++ b/_pages/fr/normes-ouvertes.html
@@ -2,7 +2,7 @@
 layout: default
 ref: openstandards
 lang: fr
-permalink: /normes-ouvertes.html
+permalink: /fr/normes-ouvertes.html
 ---
 
 <h1 property="name" id="wb-cont">Normes ouvertes</h1>
