--- a/_pages/en/docs.html
+++ b/_pages/en/docs.html
@@ -2,7 +2,7 @@
 layout: default
 ref: Docs
 lang: en
-permalink: /docs.html
+permalink: /en/docs.html
 ---
 
 <h1 property="name" id="wb-cont">Documentation</h1>
