--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -2,7 +2,7 @@
 layout: default
 ref: home
 lang: en
-permalink: home.html
+permalink: /en/index.html
 ---
 
 <div class="row profile">
@@ -10,7 +10,7 @@ permalink: home.html
     <h1 property="name" id="wb-cont">{{ site.title.en }}</h1>
     <p>Explore how Canadian public administrations (federal, provincial, territorial and municipal) creates greater transparency, accountability, increases citizen engagement, and drives innovation and economic opportunities through open Standards, open source software, open data, open information, open dialogue and open Government.</p>
   </div>
-
+  
   <div class="col-md-4 margin-top-small hidden-sm hidden-xs">
     <img src="./assets/logo_canada-ogp.png" alt="Map of Canada with Open Government Partnership colors" class="pull-right img-responsive thumbnail">
   </div>
