--- a/_pages/en/open-source-software-schema.html
+++ b/_pages/en/open-source-software-schema.html
@@ -2,11 +2,11 @@
 layout: default
 ref: ossSchema
 lang: en
-permalink: /open-source-software-schema.html
+permalink: /en/open-source-software-schema.html
 ---
 
 <h1 property="name" id="wb-cont">Metadata Schema for Open Source Software</h1>
-<p>The metadata schema for <a href="open-source-software.html">Open Source Software</a>.</p>
+<p>The metadata schema for <a href="./open-source-software.html">Open Source Software</a>.</p>
 <p>Data files are hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>.</p>
 
 <h2>Version "~" </h2>
