--- a/_pages/en/open-source-software.html
+++ b/_pages/en/open-source-software.html
@@ -2,7 +2,7 @@
 layout: default
 ref: oss
 lang: en
-permalink: /open-source-software.html
+permalink: /en/open-source-software.html
 ---
 
 <h1 property="name" id="wb-cont">Open Source Software</h1>
