--- a/_pages/en/open-standards-schema.html
+++ b/_pages/en/open-standards-schema.html
@@ -2,11 +2,11 @@
 layout: default
 ref: openstandardsSchema
 lang: en
-permalink: /open-standards-schema.html
+permalink: /en/open-standards-schema.html
 ---
 
 <h1 property="name" id="wb-cont">Metadata Schema for Open Standards</h1>
-<p>The metadata schema for <a href="open-standards.html">Open Standards</a>.</p>
+<p>The metadata schema for <a href="./open-standards.html">Open Standards</a>.</p>
 <p>Data files are hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>.</p>
 
 <h2>Version "~"</h2>
