--- a/_pages/en/open-standards.html
+++ b/_pages/en/open-standards.html
@@ -2,7 +2,7 @@
 layout: default
 ref: openstandards
 lang: en
-permalink: /open-standards.html
+permalink: /en/open-standards.html
 ---
 
 <h1 property="name" id="wb-cont">Open Standards</h1>
