--- a/_pages/fr/docs.html
+++ b/_pages/fr/docs.html
@@ -2,7 +2,7 @@
 layout: default
 ref: Docs
 lang: fr
-permalink: /docs-fr.html
+permalink: fr/docs.html
 ---
 
 <h1 property="name" id="wb-cont">Documentation</h1>
