--- a/_pages/fr/logiciels-libres-schema.html
+++ b/_pages/fr/logiciels-libres-schema.html
@@ -2,11 +2,11 @@
 layout: default
 ref: ossSchema
 lang: fr
-permalink: /logiciels-libres-schema.html
+permalink: /fr/logiciels-libres-schema.html
 ---
 
 <h1 property="name" id="wb-cont">Schéma de métadonnées pour logiciels libres ouverts</h1>
-<p>Le schéma de métadonnées pour les <a href="logiciels-libres.html">logiciels libres ouverts</a>.</p>
+<p>Le schéma de métadonnées pour les <a href="./logiciels-libres.html">logiciels libres ouverts</a>.</p>
 <p>Les données sont hébergés sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>.</p>
 
 <h2>Version "~" </h2>
