--- a/_pages/fr/normes-ouvertes-schema.html
+++ b/_pages/fr/normes-ouvertes-schema.html
@@ -2,11 +2,11 @@
 layout: default
 ref: openstandardsSchema
 lang: fr
-permalink: /normes-ouvertes-schema.html
+permalink: /fr/normes-ouvertes-schema.html
 ---
 
 <h1 property="name" id="wb-cont">Schéma de métadonnées pour les normes ouvertes</h1>
-<p>Le schéma de métadonnées pour les <a href="normes-ouvertes.html">les normes ouvertes</a>.</p>
+<p>Le schéma de métadonnées pour les <a href="./normes-ouvertes.html">les normes ouvertes</a>.</p>
 <p>Les données sont hébergés sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>.</p>
 
 <h2>Version "~" </h2>
