fixed links problems

--- a/_pages/en/open-source-code.html
+++ b/_pages/en/open-source-code.html
@@ -6,6 +6,6 @@ permalink: /en/open-source-code.html
 ---
 
 <h1 property="name" id="wb-cont">Open Source Code</h1>
-<p>The data used to generate this list is hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Create Pull Requests to add or update information on Canadian federal, provincial, territorial and municipal administrations Open Source Code. Data is also available in <a href="code.json" target="_blank">JSON format</a>.</p>
+<p>The data used to generate this list is hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Create Pull Requests to add or update information on Canadian federal, provincial, territorial and municipal administrations Open Source Code. Data is also available in <a href="../code.json" target="_blank">JSON format</a>.</p>
 
 {% include codeTable.html %}
