--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -12,7 +12,7 @@ permalink: /fr/index.html
   </div>
 
   <div class="col-md-4 margin-top-small hidden-sm hidden-xs">
-    <img src="./assets/logo_canada-ogp.png" alt="Carte du Canada avec les couleurs du Partenariat pour un gouvernement ouvert" class="pull-right img-responsive thumbnail">
+    <img src="../assets/logo_canada-ogp.png" alt="Carte du Canada avec les couleurs du Partenariat pour un gouvernement ouvert" class="pull-right img-responsive thumbnail">
   </div>
 </div>
 
