--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -12,7 +12,7 @@ permalink: /en/index.html
   </div>
   
   <div class="col-md-4 margin-top-small hidden-sm hidden-xs">
-    <img src="./assets/logo_canada-ogp.png" alt="Map of Canada with Open Government Partnership colors" class="pull-right img-responsive thumbnail">
+    <img src="../assets/logo_canada-ogp.png" alt="Map of Canada with Open Government Partnership colors" class="pull-right img-responsive thumbnail">
   </div>
 </div>
 
