--- a/_pages/en/open-source-software.html
+++ b/_pages/en/open-source-software.html
@@ -6,6 +6,6 @@ permalink: /en/open-source-software.html
 ---
 
 <h1 property="name" id="wb-cont">Open Source Software</h1>
-<p>The data used to generate this list is hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Create Pull Requests to add or update information on Open Source software used in Canadian federal, provincial, territorial and municipal administrations. Data is also available in <a href="logiciels_libres-open_source_software.json" target="_blank">JSON format</a>.</p>
+<p>The data used to generate this list is hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Create Pull Requests to add or update information on Open Source software used in Canadian federal, provincial, territorial and municipal administrations. Data is also available in <a href="../logiciels_libres-open_source_software.json" target="_blank">JSON format</a>.</p>
 
 {% include ossTable.html %}
