correct error Html-proofer: attribute type redefined

--- a/_pages/en/open-source-code-form-validation.html
+++ b/_pages/en/open-source-code-form-validation.html
@@ -277,7 +277,7 @@ permalink: /en/open-source-code-form-validation.html
 		</div>
 		<div class="form-group">
 			<label for="spdxID" class="required" ><span class="field-name">spdxID </span><strong class="required">(required)</strong></label>
-			<input class="form-control" id="spdxID" name="spdxID" type="text" type="text" required="required" />
+			<input class="form-control" id="spdxID" name="spdxID" type="text"  required="required" />
 		</div>
 
 <legend><span class="field-name"> URL of the public repository of the project</span></legend>
