Rename Organizations page to Groups (#72)
* Rename Organizations page to Groups

* rename orgs to groups in permalink

* rename orgs to groups in the files

--- a/_pages/en/open-source-code-groups.html
+++ b/_pages/en/open-source-code-groups.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-ref: codeOrgs
+ref: codeGroups
 lang: en
-permalink: /en/open-source-code-orgs.html
+permalink: /en/open-source-code-groups.html
 ---
-<h1 property="name" id="wb-cont">Open Source Code Organizations</h1>
+<h1 property="name" id="wb-cont">Open Source Code Groups</h1>
 <p>Canadian public administrations at the federal, provincial, territorial and municipal level use Github, Gitlab and others code repositories to contribute to open source code.</p>
 
-{% include codeRepoOrgs.html %}
+{% include codeRepoGroups.html %}
