--- a/_pages/fr/code-source-ouvert-groupes.html
+++ b/_pages/fr/code-source-ouvert-groupes.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-ref: codeOrgs
+ref: codeGroups
 lang: fr
-permalink: /fr/code-source-ouvert-orgs.html
+permalink: /fr/code-source-ouvert-groupes.html
 ---
-<h1 property="name" id="wb-cont">Organisations de code source ouvert</h1>
+<h1 property="name" id="wb-cont">Groupes de code source ouvert</h1>
 <p>Les administrations publiques canadiennes au niveau fédéral, provincial, territorial et municipal utilisent Github, Gitlab et d'autres référentiels de codes pour contribuer au code source ouvert.</p>
 
-{% include codeRepoOrgs.html %}
+{% include codeRepoGroups.html %}
