delete unexpected span tag

--- a/_pages/en/open-source-code-form-validation.html
+++ b/_pages/en/open-source-code-form-validation.html
@@ -45,11 +45,11 @@ permalink: /en/open-source-code-form-validation.html
     <input class="form-control" id="emailContact" name="emailContact" type="email" required="required" />
   </div>
   <div class="form-group">
-    <label for="nameContact">name</span></label>
+    <label for="nameContact">name</label>
     <input class="form-control" id="nameContact" name="nameContact" type="text" pattern="[A-Za-z\s]" data-rule-lettersonly="true" />
   </div>
       <div class="form-group">
-    <label for="phone">phone</span> </label>
+    <label for="phone">phone</label>
     <input class="form-control" id="phone" name="phone" type="tel"  data-rule-phoneUS="true" />
   </div>
 
@@ -82,7 +82,7 @@ permalink: /en/open-source-code-form-validation.html
     <label for="enDownloadUrl">downloadURL</label>
     <input class="form-control" id="enDownloadUrl" name="enDownloadUrl" type="url" placeholder="enURL"/>
 
-    <label for="frDownloadUrl" ></span></label>
+    <label for="frDownloadUrl" ></label>
     <input class="form-control" id="frDownloadUrl" name="frDownloadUrl" type="url" placeholder="frURL"/>
   </div>
 
@@ -91,7 +91,7 @@ permalink: /en/open-source-code-form-validation.html
     <label for="enHomepageURL">downloadURL</label>
     <input class="form-control" id="enHomepageURL" name="homepageURL" type="url" placeholder="enURL"/>
 
-    <label for="frHomepageURL" ></span></label>
+    <label for="frHomepageURL"></label>
     <input class="form-control" id="frHomepageURL" name="homepageURL" type="url" placeholder="frURL"/>
   </div>
 
