add link to get to Open Source Code groups page

--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -47,6 +47,13 @@ permalink: /en/index.html
           <p>Find out how to contribute using a standard metadata schema for each service.</p>
         </section>
       </div>
+
+      <div class="col-md-6">
+        <section>
+          <h3><a href="./open-source-code-groups.html">Open Source Code Groups</a></h3>
+          <p>Search Canadian public administrations open source code organizations list.</p>
+        </section>
+      </div>
     </div>
   </section>
 
