--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -50,6 +50,14 @@ permalink: /fr/index.html
     </div>
   </section>
 
+  <div class="col-md-6">
+        <section>
+          <h3><a href="./code-source-ouvert-groupes.html">Groupes de code source ouvert</a></h3>
+          <p>Effectuez des recherches dans la liste des organisations de code source ouvert des administrations publiques Canadiennes.</p>
+        </section>
+      </div>
+
+
   <div class="col-md-4 col-xs-12 pull-right">
     <section class="lnkbx">
       <h2>Derniers codes source ouverts</h2>
