Move div into section, Add link to groups, rm canada featured

--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -47,16 +47,15 @@ permalink: /fr/index.html
           <p>Découvrez comment contribuer en utilisant un schéma de métadonnées standard pour chaque service.</p>
         </section>
       </div>
-    </div>
-  </section>
 
-  <div class="col-md-6">
+      <div class="col-md-6">
         <section>
           <h3><a href="./code-source-ouvert-groupes.html">Groupes de code source ouvert</a></h3>
-          <p>Effectuez des recherches dans la liste des organisations de code source ouvert des administrations publiques Canadiennes.</p>
+          <p>Effectuez des recherches dans la liste des groupes de code source ouvert des administrations publiques Canadiennes.</p>
         </section>
       </div>
-
+    </div>
+  </section>
 
   <div class="col-md-4 col-xs-12 pull-right">
     <section class="lnkbx">
