--- a/_pages/fr/code-source-ouvert.html
+++ b/_pages/fr/code-source-ouvert.html
@@ -8,6 +8,6 @@ permalink: /fr/code-source-ouvert.html
 <h1 property="name" id="wb-cont">Code source ouvert</h1>
 <p>Les données utilisées pour générer cette liste est hébergé sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Créez des <i>Pull Requests</i> pour ajouter ou mettre à jour de l'information sur le code source ouvert des administrations fédérale, provinciales, territoriales et municipales du Canada. Les données sont aussi disponible en <a href="../code.json" target="_blank">format JSON</a>.</p>
 
-<p>Vous pouvez aussi consulté la liste des <a href="./code-source-ouvert-groupes.html">Groupes de code source ouvert</a> pour trouver plus de projets libres et dépôts de code d'administrations publiques Canadiennes.</p>
+<p>Vous pouvez aussi consulter la liste des <a href="./code-source-ouvert-groupes.html">Groupes de code source ouvert</a> pour trouver plus de projets libres et dépôts de code d'administrations publiques Canadiennes.</p>
 
 {% include codeTable.html %}
